[tool.poetry]
name = "lithonlp"
version = "0.1.0"
description = "A Domain-Adapted Dutch Language Model Trained on Geological Borehole Descriptions."
authors = ["Hossein Ghorbanfekr <hgh.comphys@gmail.com>"]
readme = "README.md"
packages = [{include = "lithonlp", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch = "^2.3.1"
transformers = "^4.43.1"
datasets = "^2.20.0"
frozendict = "^2.4.4"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
matplotlib = "3.7.0"
scipy = "1.10"
scikit-learn = "1.1.3"
evaluate = "^0.4.2"
accelerate = "0.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
